samples/_failures_safe/1761126466_d65981_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da2681b6.c: In function ‘main’:
./samples/SAFE/__tmp_da2681b6.c:180:9: error: expected declaration or statement at end of input
  180 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_da2681b6.c:180:9: error: expected declaration or statement at end of input
